public class Statistics {
    private int totalUsers;
    private int totalAnnouncements;
    private int activeUsers;

    public int getTotalUsers() {
        return totalUsers;
    }

    public int getTotalAnnouncements() {
        return totalAnnouncements;
    }

    public int getActiveUsers() {
        return activeUsers;
    }
}
