@startuml

class User {
    - numberOfAnnouncements : int
    - wishList : List<Announcement>
    + publishAnnouncement(announcement : Announcement) : void
    + editAnnouncement(announcementId : int, updatedData : String) : void
    + deleteAnnouncement(announcementId : int) : void
    + browseCategories() : List<Category>
    + browseAnnouncements(categoryId : int) : List<Announcement>
    + addToWishList(announcement : Announcement) : void
    + commentOnAnnouncement(announcement : Announcement, comment : String) : void
}

class Admin {
    + addCategory(category : Category) : void
    + removeCategory(categoryId : int) : void
    + banUser(user : User) : void
    + viewGeneralStatistics() : Statistics
}

Admin --|> User

class Announcement {
    - id : int
    - title : String
    - content : String
    - owner : User
    + addComment(user : User, comment : String) : void
}

class Category {
    - id : int
    - name : String
    - description : String
}

class Statistics {
    - totalUsers : int
    - totalAnnouncements : int
    - activeUsers : int
}

User --> Announcement : browses
User --> Announcement : publishes
User --> Announcement : comments on
User --> Category : browses
User --> Announcement : adds to wishlist
User --> Announcement : edit/remove
Admin --> Category : manages
Admin --> User : bans
Admin --> Announcement : manages
Admin --> Statistics : browses

@enduml
